# muesli

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompileOptions.cmake
muesli/: CMakeLists.txt  archives.hpp  bytes.hpp  empty.hpp  serializable.hpp  serialize.hpp  tuple.hpp
muesli/detail/: type_name.hpp
tests/: CMakeLists.txt  main.cpp
